==================== 2.27.1 ======================

==================== 2.26.0 ======================

2009-03-16  Petr Kovar  <pknbe@volny.cz>

	* docs/cs/cs.po: Fixed Czech translation.

2009-03-13  Andre Klapper  <a9016009@gmx.de>

	* cs.po: Updated Czech translation by Lucas Lommer.

2009-03-11  Andre Klapper  <a9016009@gmx.de>

	* docs/cs/cs.po: Updated Czech translation by Lucas Lommer.

2009-03-10  Andre Klapper  <a9016009@gmx.de>

	* docs/cs/cs.po: 
	* docs/Makefile.am: Added Czech translation by Jan Brož.

2009-03-04  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c (cb_key_press): Hide the dock on an escape key - bug
	572427.

	* applet.c (gnome_volume_applet_refresh): Move the dock update
	code to be in sync with the icon update code. Bug 573924. Fixes
	problems like bug 573924.

==================== 2.25.92 ======================

2009-02-17  Luca Ferretti  <elle.uca@libero.it>

	* docs/it/figures: Deleted figures directory, not needed

==================== 2.25.91 ======================

2009-02-17  Callum McKenzie  <callum@spooky-possum.org>

	* load.c:
	* applet.c: Patch from "Tefnet developers" to reload the device
	list. This should assist with bugs 167606 and 519388.
	
	* applet.c: Replace more deprecated functions. 

2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* docs/eu/eu.po: Added Basque translation.
	* docs/Makefile.am: Added 'eu' to DOC_LINGUAS.

==================== 2.25.90 ======================

2009-02-02  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c:
	* dock.c: Make the dock popdown when it looses focus.

2009-02-01  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c:
	* applet.c: Always make the dock horizontal since there doesn't
	appear to be an easy way to rotate the mute check-box.

2009-01-31  Mario Blättermann  <mariobl@svngnome.org>
	
	* docs/de/de.po: Small fix in German translation

2009-01-31  Callum McKenzie  <callum@spooky-possum.org>
