@@ -1,3 +1,10 @@
+2009-05-20  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c: 
+	* dock.c: Work around GTK+s wonky ideas about what the up key
+	means for a horizontal scroller so the dock and applet are in sync
+	with each other. See bug 581448.
+
 ==================== 2.27.1 ======================
 
 ==================== 2.26.0 ======================
